<resources>
    <string name="app_name">Smoosh</string>
    <string name="desired_league">Desired league :</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="first_page_background">first_page_background</string>
    <string name="smoosh_logo">smoosh_logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="get_started">Get started</string>
    <string name="sec_page_background">sec_page_background</string>
    <string name="background_image">background_image</string>
    <string name="i_am">I am :</string>
    <string name="finish">Finish</string>
    <string name="beginner">Beginner</string>
    <!--<string name="beginner">Beginner</string>-->
    <!--<string name="beginner">Beginner</string>-->
    <!--<string name="baller">Baller</string>-->
    <string name="baller">Baller</string>
    <string name="balder">Balder</string>
</resources>
