<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="105dp"
            android:layout_height="31dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/smoosh_logo"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/i_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/smoosh_button" android:textSize="18sp"
            android:textColor="@color/colorAccent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton6" android:layout_weight="1"
                android:textSize="18sp" android:textStyle="bold" android:fontFamily="@font/montserrat"
                android:background="@drawable/smoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/beginner" android:textOn="@string/beginner" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton7" android:layout_weight="1"
                android:textSize="18sp" android:textStyle="bold" android:fontFamily="@font/montserrat"
                android:background="@drawable/smoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/baller" android:textOn="@string/balder" android:layout_marginStart="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>