<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="105dp"
            android:layout_height="31dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:contentDescription="@string/smoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="205dp"
            android:layout_height="40dp"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textSize="36sp" android:layout_marginTop="90dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:textColor="@android:color/white" android:textAlignment="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:text="@string/on_going_all_out"
            android:textSize="20sp" android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textAlignment="center"
            android:layout_marginTop="4dp" android:fontFamily="@font/montserrat"/>
    <TextView
            android:layout_width="348dp"
            android:layout_height="60dp"
            android:id="@+id/textView3"
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:singleLine="false"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView" android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="65dp"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textAlignment="center" android:background="@drawable/smoosh_button"
            android:textColor="@android:color/white" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>